Fix bug - partners style err on mobile

--- a/app/assets/stylesheets/gmis2017/cooperative.scss
+++ b/app/assets/stylesheets/gmis2017/cooperative.scss
@@ -64,7 +64,7 @@ section.cooperative {
       margin-top: 0px;
     }
     .sponsor-title {
-      text-align: center;
+      justify-content: center;
       width: 100%;
       padding: 0;
       margin-bottom: 10px;
